--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,7 +83,7 @@ MRUItem0=/Game/StarterContent/Maps/Minimal_Default
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [ModuleFileTracking]
-TetrisUSFX01.TimeStamp=2023.04.04-06.26.17
+TetrisUSFX01.TimeStamp=2023.04.04-06.36.41
 TetrisUSFX01.LastCompileMethod=Runtime
 PakFile.TimeStamp=2023.03.03-05.16.50
 PakFile.LastCompileMethod=Unknown
@@ -963,7 +963,7 @@ BlueprintGraph.TimeStamp=2023.03.03-05.16.46
 BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1089,7 +1089,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.600
-WindowSize=X=1291.200 Y=731.200
+WindowSize=X=1292.800 Y=732.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
